add deif api new and edit api's
